--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
     <script src="pomodoroTimer.js"></script>
     <script src="pomodoro.js"></script>
     <script src="menu.js"></script>
+    <script src="keyboard.js"></script>
 </body>
 </html>
